fix button mobile

--- a/src/styles/cardProduct.css
+++ b/src/styles/cardProduct.css
@@ -189,6 +189,7 @@
         font-weight: 400;
         line-height: 16px;
         text-align: center;
+        margin-bottom: 20px;
         color: #000;
     }
 
@@ -198,6 +199,7 @@
         font-weight: 400;
         line-height: 16px;
         text-align: center;
+        margin-bottom: 20px;
         color: #fff;
     }
 
