--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -274,6 +274,7 @@
         align-items: center;
         flex-direction: column;
         width: 100%;
+        padding-top: 15px;
     }
 
     #radios1,
@@ -283,7 +284,8 @@
         align-items: center;
         width: 100px;
         margin: 0 auto;
-        padding-top: 30px;
+        padding-top: 15px;
+        padding-bottom: 20px;
     }
 
     .radio_protein,
@@ -317,6 +319,13 @@
         width: 90%;
         margin: 0 auto;
         margin-top: 15px;
+    }
+
+    #mainPlaceOrdrBtn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 60px;
     }
 
     .placeOrderBtn {
